[package]
name = "concrete-wasm-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = {version = "0.2.74"}
console_error_panic_hook = "0.1.7"
concrete = {path = "../concrete/concrete"}

#[dependencies.concrete-csprng]
#path = "../concrete-core/concrete-csprng"
#features = ["seeder_external_lib", "generator_soft"]
