[package]
name = "concrete-wasm-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = {version = "0.2.74"}
console_error_panic_hook = "0.1.7"
concrete-core-wasm = { git = "https://github.com/zama-ai/concrete-core", hash = "e663c670d94bcd220b59ef0aca047a55d80c3f27" }
concrete-commons = { git = "https://github.com/zama-ai/concrete-core", hash = "e663c670d94bcd220b59ef0aca047a55d80c3f27" }
js-sys = "0.3"

#[dependencies.concrete-csprng]
#path = "../concrete-core/concrete-csprng"
#features = ["seeder_external_lib", "generator_soft"]
